--- a/calendar-core/build.gradle
+++ b/calendar-core/build.gradle
@@ -9,4 +9,6 @@ dependencies {
     api('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 }
