--- a/calendar-api/src/main/resources/application.yml
+++ b/calendar-api/src/main/resources/application.yml
@@ -22,4 +22,16 @@ spring:
     hibernate:
       ddl-auto: update
     database: mysql
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME} #get env from Environment variables
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          socketFactory.class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          starttls:
+            enable: true
 
